Transition most to SCSS source
For some reason, despite the fact that it should be exactly equivalent, the compiled header.scss has some strange issues on Chrome that are not present with the original header.css
These issues occur in pageheaderlinks2 where it appears the text for links like "PERSONAL INFORMATION" do not update when their parents' formatting changes despite having color: unset. This results in the final color not matching any of the styles in the dropdown of Inspect Element > Element > Computed. This suggests the issue may related to Chrome's implementation of inherited styles.

--- a/footer.css
+++ b/footer.css
@@ -1,4 +1,7 @@
-@import "defines.css";
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap");
+  font-weight: 200; }
 
 /*
 This file contains all the CSS for the footer,
@@ -6,77 +9,63 @@ starting at `body>div.footerbeforediv` to the end.
 This is usually just copyright and release info, but
 can also include footer links specific to the page.
 */
+/* ======================================================= */
+div.footerbeforediv ~ div {
+  background-color: #777676; }
+  div.footerbeforediv ~ div,
+  div.footerbeforediv ~ div * {
+    margin: 0; }
 
 /* ======================================================= */
-
-div.footerbeforediv~div {
-	background-color: var(--rpigrey);
-	margin: 0;
-}
-div.footerbeforediv~div * {
-	margin: 0;
-}
-
-/* ======================================================= */
-
 /* footerlinksdiv */
 /* The links menu at the bottom (optional) */
 div.footerlinksdiv {
-	padding-top: 2em;
-}
-span.pagefooterlinks>map>p:last-child {
-	color: white;
-	visibility: collapse;
+  padding-top: 2em; }
 
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-content: space-around;
-}
-span.pagefooterlinks>map>p:last-child a {
-	visibility: visible;
-	padding-left: 1em;
-	padding-right: 1em;
-
-	font-size: small;
-	font-family: var(--sspfont);
-	color: white;
-}
-span.pagefooterlinks>map>p:last-child a:hover {
-	color: white;
-}
-span.pagefooterlinks>map>p:last-child a:visited {
-	color: white;
-}
+span.pagefooterlinks > map > p:last-child {
+  color: white;
+  visibility: collapse;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-around; }
+  span.pagefooterlinks > map > p:last-child a {
+    visibility: visible;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-size: small;
+    font-family: "Source Sans Pro", sans-serif;
+    color: white; }
+    span.pagefooterlinks > map > p:last-child a, span.pagefooterlinks > map > p:last-child a:hover, span.pagefooterlinks > map > p:last-child a:visited {
+      color: white; }
 
 /* ======================================================= */
-
 /* Info about the company that made SIS back in 2002 */
-body>div.pagefooterdiv { /* parent to span.releasetext */
-	margin-left: 0;
-	margin-right: 0;
-	padding-top: 1em;
-	float: none;
-	right: 0;
-	left: 0;
-}
-span.releasetext { /* Has the "RELEASE: X.X.X.X" thing */
-	color: white;
-	font-size: smaller;
-	font-weight: 100;
-	text-align: center;
-	display: block;
-	text-transform: capitalize;
-}
-body>div.banner_copyright {
-	left: 0;
-	right: 0;
-}
-div.banner_copyright>h5 {
-	color: white;
-	font-size: small;
-	font-weight: 100;
-	text-align: center;
-	margin: 0;
-	padding-bottom: 1em;
-}
+body > div.pagefooterdiv {
+  /* parent to span.releasetext */
+  margin-left: 0;
+  margin-right: 0;
+  padding-top: 1em;
+  float: none;
+  right: 0;
+  left: 0; }
+
+span.releasetext {
+  /* Has the "RELEASE: X.X.X.X" thing */
+  color: white;
+  font-size: smaller;
+  font-weight: 100;
+  text-align: center;
+  display: block;
+  text-transform: capitalize; }
+
+body > div.banner_copyright {
+  left: 0;
+  right: 0; }
+  body > div.banner_copyright > h5 {
+    color: white;
+    font-size: small;
+    font-weight: 100;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 1em; }
