--- a/app.css
+++ b/app.css
@@ -1,235 +1,195 @@
-@import "defines.css";
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap");
+  font-weight: 200; }
 
 :root {
-	font-family: var(--sspfont) !important;
-	font-weight: 200;
-	width: 100%;
-}
+  font-family: "Source Sans Pro", sans-serif !important;
+  font-weight: 200;
+  width: 100%; }
 
 body {
-	width: 100%;
-	overflow-x: hidden;
-}
-body>div {
-	width: 100%;
-	margin-left: 0;
-	margin-right: 0;
-}
+  width: 100%;
+  overflow-x: hidden; }
+  body > div {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0; }
 
 /* =================================================================================== */
-
 /* Page Title */
 div.pagetitlediv {
-	text-align: center;
-	border-bottom-color: black;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	padding-top: 2em;
-	background-image: url("https://rpi.edu/images/backgrounds/diamonds/diamonds-white.jpg");
-	background-repeat: repeat;
-}
-
+  text-align: center;
+  border-bottom-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  padding-top: 2em;
+  background-image: url("https://rpi.edu/images/backgrounds/diamonds/diamonds-white.jpg");
+  background-repeat: repeat; }
 
 /* Page Body */
 div.pagebodydiv {
-	margin: 0 !important;
-	padding-bottom: 2em;
-
-	display: flex;
-	flex-direction: column;
-}
+  margin: 0 !important;
+  padding-bottom: 2em;
+  display: flex;
+  flex-direction: column; }
 
 /* Page tabs */
 /* Inherits table behavior from `div.plaintable` below */
 /* Inherits mouseover/color/font from header.css for navigation links (same as in header) */
-div.pagebodydiv>table.plaintable[summary="This is main table for displaying Tab Items."] td.pldefault {
-	padding: 0;
-	border-top-width: 0;
-	border-bottom-color: lightslategray;
-	border-left-width: 0;
-	border-right-width: 0;
-}
-div.pagebodydiv>table.plaintable[summary="This is main table for displaying Tab Items."] td.pldefault tr {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-}
-div.pagebodydiv > table.plaintable[summary="This is main table for displaying Tab Items."] table.plaintable td>a {
-	font-size: small;
-}
+div.pagebodydiv > table.plaintable[summary="This is main table for displaying Tab Items."] td.pldefault {
+  padding: 0;
+  border-top-width: 0;
+  border-bottom-color: lightslategray;
+  border-left-width: 0;
+  border-right-width: 0; }
+
+div.pagebodydiv > table.plaintable[summary="This is main table for displaying Tab Items."] td.pldefault tr {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
+
+div.pagebodydiv > table.plaintable[summary="This is main table for displaying Tab Items."] table.plaintable td > a {
+  font-size: small; }
 
 /* ======================================================= */
-
 /* ==== menuplaintable ==== */
 table.menuplaintable {
-	border-top-style: none !important;
-	margin: 0;
-
-	display: flex;
-	flex-direction: column;
-}
-table.menuplaintable>tbody {
-	padding: 1em;
-
-	display: flex;
-	flex-direction: column;
-}
-table.menuplaintable>tbody>tr {
-	border-top-color: darkslategray;
-	border-top-style: solid;
-	border-top-width: 1px;
-
-	min-height: 2em;
-	display: flex;
-	align-items: center;
-	padding: 0.5em
-}
-table.menuplaintable>tbody>tr:last-child {
-	border-bottom-color: darkslategray;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-}
-table.menuplaintable td.mpdefault:first-child, table.menuplaintable td.mpdefault> {
-	display: none !important;
-}
-
-table.menuplaintable img[name="Blue Ball"] {
-	display: none !important;
-}
-/* Links */
-table.menuplaintable td.mpdefault {
-	display: unset;
-}
-table.menuplaintable td.mpdefault a, table.menuplaintable td.mpdefault a * {
-	color: black;
-	font-size: small;
-}
-table.menuplaintable td.mpdefault a:visited, table.menuplaintable td.mpdefault a *:visited {
-	color: unset;
-}
-table.menuplaintable td.mpdefault a:hover, table.menuplaintable td.mpdefault a *:hover {
-	color: unset;
-	text-decoration: underline;
-}
-/* Descriptions */
-table.menuplaintable td.mpdefault>span.menulinkdesctext {
-	font-size: smaller;
-	margin-left: 10px;
-}
+  border-top-style: none !important;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  /* Links */
+  /* Descriptions */ }
+  table.menuplaintable > tbody {
+    padding: 1em;
+    display: flex;
+    flex-direction: column; }
+  table.menuplaintable > tbody > tr {
+    border-top-color: darkslategray;
+    border-top-style: solid;
+    border-top-width: 1px;
+    min-height: 2em;
+    display: flex;
+    align-items: center;
+    padding: 0.5em; }
+  table.menuplaintable > tbody > tr:last-child {
+    border-bottom-color: darkslategray;
+    border-bottom-style: solid;
+    border-bottom-width: 1px; }
+  table.menuplaintable td.mpdefault:first-child,
+  table.menuplaintable td.mpdefault > {
+    display: none !important; }
+  table.menuplaintable img[name="Blue Ball"] {
+    display: none !important; }
+  table.menuplaintable td.mpdefault {
+    display: unset; }
+  table.menuplaintable td.mpdefault a,
+  table.menuplaintable td.mpdefault a * {
+    font-size: small; }
+    table.menuplaintable td.mpdefault a, table.menuplaintable td.mpdefault a:hover, table.menuplaintable td.mpdefault a:visited,
+    table.menuplaintable td.mpdefault a *,
+    table.menuplaintable td.mpdefault a *:hover,
+    table.menuplaintable td.mpdefault a *:visited {
+      color: black; }
+  table.menuplaintable td.mpdefault a:hover,
+  table.menuplaintable td.mpdefault a *:hover {
+    text-decoration: underline; }
+  table.menuplaintable td.mpdefault > span.menulinkdesctext {
+    font-size: smaller;
+    margin-left: 10px; }
 
 /* ==== datadisplaytable ==== */
 table.datadisplaytable {
-	margin-left: 1em;
-	margin-right: 1em;
-	border-collapse: collapse;
-	padding: 4px;
-}
-table.datadisplaytable caption {
-	font-size: large;
-	font-style: normal;
-	text-align: center;
-	
-	background-color: var(--rpigrey);
-	border-top-left-radius: 1em;
-	border-top-right-radius: 1em;
-	color: white;
-}
-table.datadisplaytable>tbody {
-	border-style: ridge;
-	border-color: var(--rpigrey);
-	border-bottom-left-radius: 1em;
-	border-bottom-right-radius: 1em;
-}
-table.datadisplaytable tr {
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: var(--rpigrey);
-}
-table.datadisplaytable th.ddlabel { /* Data Labels */
-	padding: 4px;
-}
+  margin-left: 1em;
+  margin-right: 1em;
+  border-collapse: collapse;
+  padding: 4px; }
+  table.datadisplaytable caption {
+    font-size: large;
+    font-style: normal;
+    text-align: center;
+    background-color: #777676;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    color: white; }
+  table.datadisplaytable > tbody {
+    border-style: ridge;
+    border-color: #777676;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em; }
+  table.datadisplaytable tr {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #777676; }
+  table.datadisplaytable th.ddlabel {
+    /* Data Labels */
+    padding: 4px; }
 
 /* Drop down forms */
 div.pagebodydiv form table.dataentrytable {
-	display: inline-block;
-	width: 100%;
-}
-div.pagebodydiv form table.dataentrytable select, div.pagebodydiv form table.dataentrytable input[type=submit] {
-	vertical-align: baseline;
-	display: inline-block;
-	height: 100%;
-}
-div.pagebodydiv form table.dataentrytable>tbody>tr>td.dedefault>select {
-	border-color: black;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 1em;
-	padding: 1px;
+  display: inline-block;
+  width: 100%; }
+  div.pagebodydiv form table.dataentrytable select,
+  div.pagebodydiv form table.dataentrytable input[type=submit] {
+    vertical-align: baseline;
+    display: inline-block;
+    height: 100%; }
+  div.pagebodydiv form table.dataentrytable > tbody > tr > td.dedefault > select {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1em;
+    padding: 1px;
+    text-align: center;
+    vertical-align: middle; }
 
-	text-align: center;
-	vertical-align: middle;
-}
-div.pagebodydiv form input[type=submit], div.pagebodydiv form input[type=reset] {
-	margin: 0;
-	border-left: 0;
-
-	border-color: black;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 1em;
-}
+div.pagebodydiv form input[type=submit],
+div.pagebodydiv form input[type=reset] {
+  margin: 0;
+  border-left: 0;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 1em; }
 
 /* ==== plaintable ==== */
 /* In-page tab items and site map contents */
-
-/* Columns */
-div.pagebodydiv>table.plaintable:first-of-type {
-	table-layout: fixed;
-	width: 100%;
-}
-div.pagebodydiv>table.plaintable:first-of-type>tbody>tr>td {
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	border-collapse: collapse;
-	padding: 0.5em;
-}
-/* Within Columns */
-div.pagebodydiv>table.plaintable table.plaintable {
-	width: 100%;
-}
-div.pagebodydiv>table.plaintable table.plaintable td.pldefault {
-	font-size: 0;
-}
-div.pagebodydiv>table.plaintable:first-of-type table.plaintable a {
-	font-size: x-small;
-	visibility: visible;
-	color: black;
-}
-div.pagebodydiv>table.plaintable:first-of-type table.plaintable a:hover {
-	color: black;
-	font-weight: unset;
-}
-div.pagebodydiv>table.plaintable:first-of-type table.plaintable a:visited {
-	color: black;
-	font-weight: unset;
-}
-div.pagebodydiv>table.plaintable:first-of-type table.plaintable a>b {
-	margin-top: 0.5em;
-	font-size: small;
-	visibility: visible;
-	color: black;
-	border-top-color: black;
-	border-top-width: 1px;
-	border-top-style: solid;
-	border-bottom-color: black;
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-}
-div.pagebodydiv>table.plaintable:first-of-type table.plaintable a>b:hover {
-	color: black;
-}
-div.pagebodydiv>table.plaintable:first-of-type table.plaintable a>b:visited {
-	color: black;
-}
+div.pagebodydiv > table.plaintable {
+  /* Columns */
+  /* Within Columns */ }
+  div.pagebodydiv > table.plaintable:first-of-type {
+    table-layout: fixed;
+    width: 100%; }
+    div.pagebodydiv > table.plaintable:first-of-type > tbody > tr > td {
+      border-color: black;
+      border-width: 1px;
+      border-style: solid;
+      border-collapse: collapse;
+      padding: 0.5em; }
+  div.pagebodydiv > table.plaintable table.plaintable {
+    width: 100%; }
+    div.pagebodydiv > table.plaintable table.plaintable td.pldefault {
+      font-size: 0; }
+  div.pagebodydiv > table.plaintable:first-of-type table.plaintable a {
+    font-size: x-small;
+    visibility: visible;
+    color: black; }
+    div.pagebodydiv > table.plaintable:first-of-type table.plaintable a, div.pagebodydiv > table.plaintable:first-of-type table.plaintable a:hover, div.pagebodydiv > table.plaintable:first-of-type table.plaintable a:visited {
+      color: black; }
+    div.pagebodydiv > table.plaintable:first-of-type table.plaintable a:visited, div.pagebodydiv > table.plaintable:first-of-type table.plaintable a:hover {
+      font-weight: inherit; }
+    div.pagebodydiv > table.plaintable:first-of-type table.plaintable a > b {
+      margin-top: 0.5em;
+      font-size: small;
+      visibility: visible;
+      color: black;
+      border-top-color: black;
+      border-top-width: 1px;
+      border-top-style: solid;
+      border-bottom-color: black;
+      border-bottom-width: 1px;
+      border-bottom-style: solid; }
+      div.pagebodydiv > table.plaintable:first-of-type table.plaintable a > b, div.pagebodydiv > table.plaintable:first-of-type table.plaintable a > b:hover, div.pagebodydiv > table.plaintable:first-of-type table.plaintable a > b:visited {
+        color: black; }
