--- a/emergency_contacts.css
+++ b/emergency_contacts.css
@@ -1,15 +1,11 @@
-@import "defines.css";
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap");
+  font-weight: 200; }
 
 /* Link formatting */
-table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr>td:nth-child(2)>a {
-    color: var(--rpired);
-}
-table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr>td:nth-child(2)>a:hover {
-    color: var(--rpired);
-}
-table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr>td:nth-child(2)>a:visited {
-    color: var(--rpired);
-}
+table.datadisplaytable[summary="This table shows emergency contacts."] > tbody > tr > td:nth-child(2) > a, table.datadisplaytable[summary="This table shows emergency contacts."] > tbody > tr > td:nth-child(2) > a:hover, table.datadisplaytable[summary="This table shows emergency contacts."] > tbody > tr > td:nth-child(2) > a:visited {
+  color: #D6001C; }
 
 /* Add contact */
 /*
@@ -17,28 +13,23 @@ table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr:
     visibility: hidden;
 }
 */
-table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr:last-of-type>td:nth-child(2)>a {
-    /* Bubble around "New Contact" */
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--rpired);
-
-    border-radius: 0.5em;
-    background-color: var(--rpired);
-    padding-left: 0.5em;
-    padding-right: 1em;
-    /*background-image: url("page_assets/plus_icon.gif");*/
-    
-    /* "New Contact" text */
-    color: white;
-}
-table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr:last-of-type>td:nth-child(2)>a:hover {
-    color: var(--rpired);
+table.datadisplaytable[summary="This table shows emergency contacts."] > tbody > tr:last-of-type > td:nth-child(2) > a {
+  /* Bubble around "New Contact" */
+  border-style: solid;
+  border-width: 1px;
+  border-color: #D6001C;
+  border-radius: 0.5em;
+  background-color: #D6001C;
+  padding-left: 0.5em;
+  padding-right: 1em;
+  /*background-image: url("page_assets/plus_icon.gif");*/
+  /* "New Contact" text */
+  color: white; }
+  table.datadisplaytable[summary="This table shows emergency contacts."] > tbody > tr:last-of-type > td:nth-child(2) > a:hover {
+    color: #D6001C;
     background-color: white;
-    text-decoration-line: unset;
-}
-table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr:last-of-type>td:nth-child(2)>a::before {
+    text-decoration-line: unset; }
+  table.datadisplaytable[summary="This table shows emergency contacts."] > tbody > tr:last-of-type > td:nth-child(2) > a::before {
     content: "+";
     font-weight: 900;
-    padding: 1px;
-}
+    padding: 1px; }
