--- a/site_map.css
+++ b/site_map.css
@@ -1,33 +1,37 @@
-/* Show/Hide Details */
-div.pagebodydiv>form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] {
-	text-align: center;
-	border-bottom-color: black;
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-}
-div.pagebodydiv>form>input[value="Show Details"], div.pagebodydiv>form>input[value="Hide Details"] {
-	border: none;
-	border-radius: 1em;
-	background-color: transparent;
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap");
+  font-weight: 200; }
 
-	color: var(--rpired);
-	
-}
-div.pagebodydiv>form>input[value="Show Details"]:hover, div.pagebodydiv>form>input[value="Hide Details"]:hover {
-	border: none;
-	background-color: lightgray;
-	color: var(--rpired);
-}
+/* Show/Hide Details */
+div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] {
+  text-align: center;
+  border-bottom-color: black;
+  border-bottom-width: 1px;
+  border-bottom-style: solid; }
+  div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Show Details"],
+  div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Hide Details"] {
+    border: none;
+    border-radius: 1em;
+    background-color: transparent; }
+    div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Show Details"], div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Show Details"]:hover, div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Show Details"]:visited,
+    div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Hide Details"],
+    div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Hide Details"]:hover,
+    div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Hide Details"]:visited {
+      color: #D6001C; }
+    div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Show Details"]:hover,
+    div.pagebodydiv > form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] > input[value="Hide Details"]:hover {
+      border: none;
+      background-color: lightgray; }
 
 /* Links */
-td.pldefault>a.sitemaplevel1, td.pldefault>a.sitemaplevel1:hover, td.pldefault>a.sitemaplevel1:visited {
-	color: black;
-	font-weight: bold !important;
-	font-size: large !important;
-	text-align: center;
-
-	border-bottom-color: black;
-	border-bottom-width: 2px;
-	border-bottom-style: solid;
-	visibility: visible;
-}
+td.pldefault > a.sitemaplevel1 {
+  font-weight: bold !important;
+  font-size: large !important;
+  text-align: center;
+  border-bottom-color: black;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  visibility: visible; }
+  td.pldefault > a.sitemaplevel1, td.pldefault > a.sitemaplevel1:hover, td.pldefault > a.sitemaplevel1:visited {
+    color: black; }
