--- a/header.css
+++ b/header.css
@@ -1,5 +1,4 @@
-@import "defines.css";
-
+@import url(defines.css);
 /*
 This file contains all the CSS for elements contained in
 the header `body>div.headerwrapperdiv`
@@ -9,7 +8,6 @@ do as much for due to the way the HTML is organized. Fortunately, the header
 is relatively consistent across most pages (though it is clear that a few
 inconsistent changes have been made to certain pages over the years).
 */
-
 /* =================================================================================== */
 /* This is the top header.
 
@@ -22,142 +20,120 @@ However, we have made it consistently "Rensselaer Student Information System"
 Note that this makes the text unselectable
 */
 div.headerwrapperdiv {
-	background: none;
-}
-div.headerwrapperdiv>div.pageheaderdiv1 {
-	background-image: url("https://rpi.edu/dept/cct/apps/web-branding/v1/header/meganav/img/RPIlogo_white.png"); /*"https://sis.rpi.edu/gengifs/smllman.gif"*/
-	background-position: right 1em top 1em;
-	background-repeat: no-repeat;
-	background-origin: padding-box;
-	background-color: var(--rpired) !important;
-	margin: 0;
-}
-div.headerwrapperdiv>div.headerlinksdiv {
-	margin-top: 0;
-	padding-top: 2em;
-}
-div.pageheaderdiv1>h1 {
-	color: white;
-	font-family: var(--sspfont) !important;
-	font-size: 0;
-	padding-top: 64px;
-	margin: 8px;
-	user-select: none;
-}
-div.pageheaderdiv1>h1::before {
-	content: "Rensselaer Student Information System";
-	font-size: 32px;
-}
-
-/* =================================================================================== */
-/* Navigation Links -- Ensure selector specificity to get styling order precedence */
-div.headerlinksdiv {
-	margin: 0 !important;
-	padding: 0 !important;
-	background-color: white;
-	padding-bottom: 0;
-}
-div.headerlinksdiv>span.pageheaderlinks2 table {
-	margin: 0 !important;
-	display: inline;
-}
-div.headerlinksdiv>span.pageheaderlinks2 table table>tbody>tr {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	min-width: 100vw;
-}
-div.headerlinksdiv p {
-	display: none;
-}
-tr>td.tabon, tr>td.taboff{
-	background-color: white;
-	color: #767676 !important;
-	background: none !important;
-	padding: 0 !important;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-tr>td.tabon:hover, tr>td.taboff:hover {
-	background-color: var(--rpired) !important;
-	color: white !important;
-}
-tr>td.tabon>a, tr>td.taboff>a {
-	color: unset !important; /*Inherit the parent's color, allowing for change on hover*/
-	font-family: var(--sspfont) !important;
-	font-weight: 200 !important;
-	padding-left: 8px;
-	padding-right: 8px;
-	margin-left: 1px;
-	margin-right: 1px;
-	text-transform: uppercase;
-	text-align: center !important;
-}
-td.bgtabon, td.bgtaboff {
-	display: none;
-}
+  background: none;
+  /* Top banner with title, set to red with white logo. */
+  /* =================================================================================== */
+  /* Navigation Links -- Ensure selector specificity to get styling order precedence */ }
+  div.headerwrapperdiv > div.pageheaderdiv1 {
+    background-image: url("https://rpi.edu/dept/cct/apps/web-branding/v1/header/meganav/img/RPIlogo_white.png");
+    /*"https://sis.rpi.edu/gengifs/smllman.gif"*/
+    background-position: right 1em top 1em;
+    background-repeat: no-repeat;
+    background-origin: padding-box;
+    background-color: var(--rpired) !important;
+    margin: 0;
+    /* "Rensselaer Student Information System" text */ }
+    div.headerwrapperdiv > div.pageheaderdiv1 > h1 {
+      color: white;
+      font-family: var(--sspfont) !important;
+      font-size: 0;
+      padding-top: 64px;
+      margin: 8px; }
+      div.headerwrapperdiv > div.pageheaderdiv1 > h1::before {
+        content: "Rensselaer Student Information System";
+        font-size: 32px; }
+  div.headerwrapperdiv div.headerlinksdiv {
+    margin: 0 !important;
+    padding: 0 !important;
+    background-color: white;
+    padding-bottom: 0; }
+    div.headerwrapperdiv div.headerlinksdiv > span.pageheaderlinks2 table {
+      margin: 0 !important;
+      display: inline; }
+      div.headerwrapperdiv div.headerlinksdiv > span.pageheaderlinks2 table table > tbody > tr {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        min-width: 100vw; }
+    div.headerwrapperdiv div.headerlinksdiv p {
+      display: none; }
+  div.headerwrapperdiv tr > td.tabon,
+  div.headerwrapperdiv tr > td.taboff {
+    background-color: white;
+    color: #767676 !important;
+    background: none !important;
+    padding: 0 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    div.headerwrapperdiv tr > td.tabon:hover,
+    div.headerwrapperdiv tr > td.taboff:hover {
+      background-color: var(--rpired) !important;
+      color: white !important; }
+    div.headerwrapperdiv tr > td.tabon > a,
+    div.headerwrapperdiv tr > td.taboff > a {
+      color: unset !important;
+      /*Inherit the parent's color, allowing for change on hover*/
+      font-family: var(--sspfont) !important;
+      font-weight: 200 !important;
+      padding-left: 8px;
+      padding-right: 8px;
+      margin-left: 1px;
+      margin-right: 1px;
+      text-transform: uppercase;
+      text-align: center !important; }
+  div.headerwrapperdiv td.bgtabon,
+  div.headerwrapperdiv td.bgtaboff {
+    display: none; }
 
 /* =================================================================================== */
 /* Search Bar */
-div.headerwrapperdiv>table.plaintable>tbody>tr {
-	display: flex;
-	justify-content: space-between;
-	align-items: stretch;
-}
-div.headerwrapperdiv>table {
-	padding-top: 2px;
-	padding-bottom: 2px;
-	background-color: #B6B6B6;
-}
-div.headerlinksdiv2>form {
-	background-color: white;
-	font-size: 0;
-	border-radius: 4px;
-	border-width: 1px;
-	border-style: solid;
-	padding: 2px;
-	float: left;
-}
-div.headerlinksdiv2>form input {
-	font-size: small;
-}
-input#keyword_in_id {
-	border-style: none;
-}
-div.headerlinksdiv2>form>input[type=submit] {
-	background-color: lightgray;
-	text-align: center;
-	display: inline-block;
-	text-decoration: none;
-	border-radius: 2px;
-	border-style: none !important;
-}
+div.headerwrapperdiv > table {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  background-color: #B6B6B6; }
+  div.headerwrapperdiv > table.plaintable > tbody > tr {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch; }
+
+div.headerlinksdiv2 > form {
+  background-color: white;
+  font-size: 0;
+  border-radius: 4px;
+  border-width: 1px;
+  border-style: solid;
+  padding: 2px;
+  float: left; }
+  div.headerlinksdiv2 > form input {
+    font-size: small; }
+    div.headerlinksdiv2 > form input#keyword_in_id {
+      border-style: none; }
+    div.headerlinksdiv2 > form input[type=submit] {
+      background-color: lightgray;
+      text-align: center;
+      display: inline-block;
+      text-decoration: none;
+      border-radius: 2px;
+      border-style: none !important; }
 
 /* Page Header Links */
 p.rightaligntext {
-	display: inline-block;
-	height: 100%;
-}
-span.pageheaderlinks {
-	display: inline;
-	float: right;
-	vertical-align: middle;
+  display: inline-block;
+  height: 100%; }
 
-	font-family: var(--rpifontsans);
-	user-select: none;	
-}
-span.pageheaderlinks>a.submenulinktext2 {
-	background-color: transparent;
-	padding: 5px;
-	user-select: text;
-	color: white !important;
-	vertical-align: middle;
-}
-span.pageheaderlinks>a.submenulinktext2:visited {
-	color: unset !important;
-}
-span.pageheaderlinks>a.submenulinktext2:hover {
-	color: unset !important;
-}
+span.pageheaderlinks {
+  display: inline;
+  float: right;
+  vertical-align: middle;
+  font-family: var(--rpifontsans);
+  user-select: none; }
+  span.pageheaderlinks > a.submenulinktext2 {
+    background-color: transparent;
+    padding: 5px;
+    user-select: text;
+    color: white !important;
+    vertical-align: middle; }
+    span.pageheaderlinks > a.submenulinktext2:visited, span.pageheaderlinks > a.submenulinktext2:hover {
+      color: unset !important; }
